--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
 		"svelte": "^4.2.7",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lucide-svelte": "^0.383.0"
+	}
 }
